fix: text overflow시 UI가 깨지는 문제 수정

--- a/src/pages/Cafeteria/CafeteriaPage/CafeteriaPage.module.scss
+++ b/src/pages/Cafeteria/CafeteriaPage/CafeteriaPage.module.scss
@@ -313,6 +313,7 @@
     border: 1px solid #8e8e8e;
     border-radius: 8px;
     padding: 0;
+    flex-shrink: 0;
     overflow: hidden;
 
     img {
@@ -353,6 +354,7 @@
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
+    word-break: break-all;
     line-height: 1.67;
     letter-spacing: -0.48px;
     color: rgb(73 73 73);
